--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hubspot-embeddable-ringcentral-phone",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "RingCentral Embeddable Voice with chrome extension for HubSpot",
   "main": "index.js",
   "scripts": {
@@ -60,6 +60,7 @@
     "file-loader": "1.1.11",
     "happypack": "5.0.0",
     "html-loader": "0.5.5",
+    "libphonenumber-js": "1.4.6",
     "lodash": "4.17.10",
     "lodash-webpack-plugin": "0.11.5",
     "npm-run-all": "4.1.3",
@@ -72,5 +73,6 @@
     "webpack": "4.16.5",
     "webpack-cli": "2.1.4",
     "webpack-extraneous-file-cleanup-plugin": "2.0.0"
-  }
+  },
+  "dependencies": {}
 }
