--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hubspot-embeddable-ringcentral-phone",
-  "version": "0.0.19",
+  "version": "0.0.20",
   "description": "RingCentral Embeddable Voice with chrome extension for HubSpot",
   "main": "index.js",
   "scripts": {
@@ -70,6 +70,7 @@
     "style-loader": "0.21.0",
     "stylus": "0.54.5",
     "stylus-loader": "3.0.2",
+    "url-loader": "1.1.2",
     "webpack": "4.16.5",
     "webpack-cli": "2.1.4",
     "webpack-extraneous-file-cleanup-plugin": "2.0.0"
