--- a/.eslintrc
+++ b/.eslintrc
@@ -33,13 +33,11 @@
       "generators": true,
       "templateStrings": true,
       "superInFunctions": true,
-      "experimentalObjectRestSpread": true,
-      "jsx": true
+      "experimentalObjectRestSpread": true
     },
     "sourceType": "module"
   },
   "plugins": [
-    "react",
     "import",
     "promise",
     "compat"
@@ -88,21 +86,6 @@
     "no-delete-var": 1,
     "no-mixed-spaces-and-tabs": 1,
     "no-unused-vars": 1,
-    "comma-dangle": 1,
-    "react/prefer-es6-class": 1,
-    "react/no-multi-comp": 0,
-    "react/prefer-stateless-function": 1,
-    "react/jsx-pascal-case": 1,
-    "react/jsx-closing-bracket-location": 1,
-    "jsx-quotes": 1,
-    "react/jsx-curly-spacing": 1,
-    "react/jsx-boolean-value": 1,
-    "react/no-string-refs": 0,
-    "react/self-closing-comp": 1,
-    "react/jsx-no-bind": [1, { "allowArrowFunctions": true }],
-    "react/require-render-return": 1,
-    "react/sort-comp": 1,
-    "react/jsx-uses-vars": 1,
-    "react/jsx-no-undef": 1
+    "comma-dangle": 1
   }
 }
