--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "RingCentral Embeddable Voice for HubSpot",
   "description": "RingCentral Embeddable Voice for HubSpot",
-  "version": "0.0.27",
+  "version": "0.1.0",
   "permissions": [
     "http://*/",
     "https://*/",
@@ -11,7 +11,6 @@
     "background",
     "tabCapture",
     "unlimitedStorage",
-    "https://*.hubspot.com/*",
     "https://*.hubspot.com/*"
   ],
   "page_action": {
@@ -50,6 +49,6 @@
     ],
     "persistent": true
   },
-  "content_security_policy": "script-src 'self' https://apps.ringcentral.com/integration/ringcentral-embeddable/0.1.0/index.html; object-src 'self'",
+  "content_security_policy": "script-src 'self' https://ringcentral.github.io/ringcentral-embeddable/index.html; object-src 'self'",
   "manifest_version": 2
 }
