--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hubspot-embeddable-ringcentral-phone",
-  "version": "0.3.2",
+  "version": "0.4.0",
   "description": "RingCentral Embeddable Voice with chrome extension for HubSpot",
   "main": "index.js",
   "scripts": {
@@ -42,6 +42,7 @@
     "babel-plugin-import": "1.10.0",
     "babel-plugin-lodash": "3.3.4",
     "concat-loader": "0.1.0",
+    "copy-webpack-plugin": "4.6.0",
     "cross-env": "5.1.6",
     "css-loader": "0.28.11",
     "dayjs": "1.7.7",
@@ -64,7 +65,7 @@
     "npm-run-all": "4.1.3",
     "pug-html-loader": "1.1.5",
     "recursive-assign": "0.2.0",
-    "ringcentral-embeddable-extension-common": "0.4.2",
+    "ringcentral-embeddable-extension-common": "0.4.6",
     "shelljs": "0.8.2",
     "style-loader": "0.21.0",
     "stylus": "0.54.5",
