--- a/.gitignore
+++ b/.gitignore
@@ -2,15 +2,17 @@
 *.log
 .DS_Store
 *.rdb
+*~
+site
 
 # config etc
 .idea/
 /temp/
 .vscode/
-/dist/content.js*
-/dist/background*
-/dist/manifest.json
-package-lock.json
+/dist/
+/dist-firefox/
+
+#package-lock.json
 /config.js
 *.zip
 
