--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "hubspot-embeddable-ringcentral-phone",
-  "version": "0.1.0",
+  "version": "1.4.2",
   "description": "RingCentral Embeddable Voice with chrome extension for HubSpot",
   "main": "index.js",
   "scripts": {
     "build": "./node_modules/.bin/cross-env NODE_ENV=production ./node_modules/.bin/webpack --progress -w",
     "start": "npm run build",
     "postinstall": "node bin/post-install",
-    "lint": "./node_modules/.bin/eslint --max-warnings 0 --ext .js  src"
+    "lint": "./node_modules/.bin/standard",
+    "fix": "./node_modules/.bin/standard --fix"
   },
   "repository": {
     "type": "git",
@@ -26,53 +27,47 @@
   },
   "homepage": "https://github.com/ringcentral/hubspot-embeddable-ringcentral-phone#readme",
   "devDependencies": {
-    "@babel/cli": "7.1.2",
-    "@babel/core": "7.1.2",
-    "@babel/plugin-proposal-class-properties": "7.1.0",
-    "@babel/plugin-proposal-decorators": "7.1.2",
+    "@babel/cli": "7.4.3",
+    "@babel/core": "^7.4.5",
+    "@babel/plugin-proposal-class-properties": "7.4.0",
+    "@babel/plugin-proposal-decorators": "7.4.0",
     "@babel/plugin-proposal-json-strings": "7.2.0",
     "@babel/plugin-syntax-dynamic-import": "7.0.0",
-    "@babel/plugin-transform-runtime": "7.1.0",
-    "@babel/preset-env": "7.1.0",
-    "@babel/preset-react": "7.0.0",
-    "@babel/register": "7.0.0",
-    "@babel/runtime": "7.1.2",
+    "@babel/plugin-transform-runtime": "7.4.3",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/register": "7.4.0",
+    "@babel/runtime": "7.4.3",
     "babel-eslint": "10.0.1",
-    "babel-loader": "8.0.4",
+    "babel-loader": "8.0.5",
     "babel-plugin-import": "1.10.0",
     "babel-plugin-lodash": "3.3.4",
     "concat-loader": "0.1.0",
+    "copy-webpack-plugin": "4.6.0",
     "cross-env": "5.1.6",
-    "css-loader": "0.28.11",
+    "css-loader": "^3.0.0",
     "dayjs": "1.7.7",
-    "eslint": "5.7.0",
-    "eslint-config-standard": "12.0.0",
-    "eslint-formatter-pretty": "1.3.0",
-    "eslint-import-resolver-webpack": "0.10.1",
-    "eslint-plugin-compat": "2.6.2",
-    "eslint-plugin-import": "2.14.0",
-    "eslint-plugin-node": "7.0.1",
-    "eslint-plugin-promise": "4.0.1",
-    "eslint-plugin-standard": "4.0.0",
     "extract-loader": "2.0.1",
     "file-loader": "1.1.11",
     "happypack": "5.0.0",
     "html-loader": "0.5.5",
-    "libphonenumber-js": "1.4.6",
-    "lodash": "4.17.10",
+    "lodash": "^4.17.15",
     "lodash-webpack-plugin": "0.11.5",
     "npm-run-all": "4.1.3",
     "pug-html-loader": "1.1.5",
     "recursive-assign": "0.2.0",
-    "ringcentral-embeddable-extension-common": "0.1.8",
+    "ringcentral-embeddable-extension-common": "0.6.5",
     "shelljs": "0.8.2",
+    "standard": "^12.0.1",
     "style-loader": "0.21.0",
     "stylus": "0.54.5",
     "stylus-loader": "3.0.2",
     "url-loader": "1.1.2",
-    "webpack": "4.16.5",
-    "webpack-cli": "2.1.4",
+    "webpack": "4.32.2",
+    "webpack-cli": "3.3.0",
+    "webpack-dev-server": "3.3.1",
     "webpack-extraneous-file-cleanup-plugin": "2.0.0"
   },
-  "dependencies": {}
+  "standard": {
+    "parser": "babel-eslint"
+  }
 }
