--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hubspot-embeddable-ringcentral-phone",
-  "version": "1.5.4",
+  "version": "1.6.0",
   "description": "RingCentral Embeddable Voice with chrome extension for HubSpot",
   "main": "index.js",
   "scripts": {
@@ -42,7 +42,7 @@
     "babel-plugin-import": "1.10.0",
     "babel-plugin-lodash": "3.3.4",
     "concat-loader": "0.1.0",
-    "copy-webpack-plugin": "4.6.0",
+    "copy-webpack-plugin": "^5.1.1",
     "cross-env": "5.1.6",
     "css-loader": "^3.0.0",
     "dayjs": "1.7.7",
@@ -55,7 +55,7 @@
     "npm-run-all": "4.1.3",
     "pug-html-loader": "1.1.5",
     "recursive-assign": "0.2.0",
-    "ringcentral-embeddable-extension-common": "0.7.2",
+    "ringcentral-embeddable-extension-common": "0.7.4",
     "shelljs": "0.8.2",
     "standard": "^12.0.1",
     "style-loader": "0.21.0",
