--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "embeddable",
     "phone"
   ],
-  "author": "ZHAO Xudong <zxdong@gmail.com>",
+  "author": "Drake ZHAO <drake.zhao@ringcentral.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/ringcentral/hubspot-embeddable-ringcentral-phone/issues"
