--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "start": "npm run build",
     "postinstall": "node bin/post-install",
     "lint": "./node_modules/.bin/standard",
-    "fix": "./node_modules/.bin/standard --fix"
+    "fix": "./node_modules/.bin/standard --fix",
+    "docs": "mkdocs serve",
+    "docs-b": "mkdocs build",
+    "docs-p": "mkdocs gh-deploy",
+    "deploy": "npm run docs-b && npm run docs-p"
   },
   "repository": {
     "type": "git",
