Fix contacts sync

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hubspot-embeddable-ringcentral-phone",
-  "version": "1.8.0",
+  "version": "1.8.1",
   "description": "RingCentral Embeddable Voice with chrome extension for HubSpot",
   "main": "index.js",
   "scripts": {
@@ -60,7 +60,7 @@
     "pug-html-loader": "1.1.5",
     "recursive-assign": "0.2.0",
     "ringcentral-embeddable-extension-common": "0.7.6",
-    "shelljs": "0.8.2",
+    "shelljs": "^0.8.2",
     "standard": "^12.0.1",
     "style-loader": "0.21.0",
     "stylus": "0.54.5",
