--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hubspot-embeddable-ringcentral-phone",
-  "version": "1.8.6",
+  "version": "1.8.7",
   "description": "RingCentral Embeddable Voice with chrome extension for HubSpot",
   "main": "index.js",
   "scripts": {
@@ -42,6 +42,7 @@
     "@babel/preset-env": "^7.4.5",
     "@babel/register": "7.4.0",
     "@babel/runtime": "7.4.3",
+    "@popperjs/core": "^2.0.6",
     "babel-eslint": "10.0.1",
     "babel-loader": "8.0.5",
     "babel-plugin-import": "1.10.0",
@@ -60,7 +61,7 @@
     "npm-run-all": "4.1.3",
     "pug-html-loader": "1.1.5",
     "recursive-assign": "0.2.0",
-    "ringcentral-embeddable-extension-common": "0.7.6",
+    "ringcentral-embeddable-extension-common": "0.7.7",
     "shelljs": "^0.8.2",
     "standard": "^12.0.1",
     "style-loader": "0.21.0",
