Support insert meeting content

--- a/src/manifest-firefox.json
+++ b/src/manifest-firefox.json
@@ -7,6 +7,8 @@
     "https://*/",
     "storage",
     "activeTab",
+    "clipboardRead",
+    "clipboardWrite",
     "tabs",
     "unlimitedStorage",
     "https://*.hubspot.com/*"
