Support contact select for meeting sync

--- a/src/manifest-firefox.json
+++ b/src/manifest-firefox.json
@@ -40,6 +40,8 @@
         "https://app.hubspot.com/*"
       ],
       "js": [
+        "./react-dom.production.min.js",
+        "./react.production.min.js",
         "./jsstore.worker.min.js",
         "./content.js"
       ]
