--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   },
   "homepage": "https://github.com/ringcentral/hubspot-embeddable-ringcentral-phone#readme",
   "devDependencies": {
-    "@babel/cli": "7.4.3",
+    "@babel/cli": "^7.8.4",
     "@babel/core": "^7.4.5",
     "@babel/plugin-proposal-class-properties": "7.4.0",
     "@babel/plugin-proposal-decorators": "7.4.0",
@@ -41,8 +41,10 @@
     "@babel/plugin-syntax-dynamic-import": "7.0.0",
     "@babel/plugin-transform-runtime": "7.4.3",
     "@babel/preset-env": "^7.4.5",
-    "@babel/register": "7.4.0",
+    "@babel/preset-react": "^7.8.3",
+    "@babel/register": "^7.8.6",
     "@babel/runtime": "7.4.3",
+    "antd": "4.0.3",
     "babel-eslint": "10.0.1",
     "babel-loader": "8.0.5",
     "babel-plugin-import": "1.10.0",
@@ -60,6 +62,8 @@
     "lodash-webpack-plugin": "0.11.5",
     "npm-run-all": "4.1.3",
     "pug-html-loader": "1.1.5",
+    "react": "16.13.0",
+    "react-dom": "16.13.0",
     "recursive-assign": "0.2.0",
     "ringcentral-embeddable-extension-common": "0.7.10",
     "shelljs": "^0.8.2",
