--- a/src/manifest.json
+++ b/src/manifest.json
@@ -13,6 +13,7 @@
     "unlimitedStorage",
     "clipboardRead",
     "clipboardWrite",
+    "debugger",
     "https://*.hubspot.com/*"
   ],
   "page_action": {
