--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hubspot-embeddable-ringcentral-phone",
-  "version": "1.10.2",
+  "version": "1.11.0",
   "description": "RingCentral Embeddable Voice with chrome extension for HubSpot",
   "main": "index.js",
   "scripts": {
@@ -58,6 +58,8 @@
     "file-loader": "1.1.11",
     "happypack": "5.0.0",
     "html-loader": "0.5.5",
+    "less": "^3.11.1",
+    "less-loader": "^5.0.0",
     "lodash": "^4.17.15",
     "lodash-webpack-plugin": "0.11.5",
     "npm-run-all": "4.1.3",
@@ -65,7 +67,7 @@
     "react": "16.13.0",
     "react-dom": "16.13.0",
     "recursive-assign": "0.2.0",
-    "ringcentral-embeddable-extension-common": "0.8.0",
+    "ringcentral-embeddable-extension-common": "0.8.3",
     "shelljs": "^0.8.2",
     "standard": "^12.0.1",
     "style-loader": "0.21.0",
