--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hubspot-embeddable-ringcentral-phone",
-  "version": "2.0.3",
+  "version": "2.1.0",
   "description": "RingCentral Embeddable Voice with chrome extension for HubSpot",
   "main": "index.js",
   "scripts": {
@@ -65,11 +65,14 @@
     "lodash": "^4.17.15",
     "lodash-webpack-plugin": "0.11.5",
     "npm-run-all": "4.1.3",
+    "postcss-loader": "^3.0.0",
+    "postcss-rename-selector": "^0.1.1",
     "pug-html-loader": "1.1.5",
     "react": "16.13.0",
     "react-dom": "16.13.0",
     "recursive-assign": "0.2.0",
-    "ringcentral-embeddable-extension-common": "0.8.7",
+    "replace-in-file": "^5.0.2",
+    "ringcentral-embeddable-extension-common": "0.9.0",
     "shelljs": "^0.8.2",
     "standard": "^12.0.1",
     "style-loader": "0.21.0",
