--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hubspot-embeddable-ringcentral-phone",
-  "version": "4.7.0",
+  "version": "4.7.1",
   "description": "RingCentral Embeddable Voice with chrome extension for HubSpot",
   "main": "index.js",
   "scripts": {
@@ -64,6 +64,7 @@
     "less-loader": "^5.0.0",
     "lodash": "^4.17.20",
     "lodash-webpack-plugin": "0.11.5",
+    "nanoid": "^3.1.20",
     "npm-run-all": "4.1.3",
     "postcss-loader": "^3.0.0",
     "postcss-rename-selector": "^0.1.1",
