--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hubspot-embeddable-ringcentral-phone",
-  "version": "6.0.4",
-  "description": "RingCentral Embeddable Voice with chrome extension for HubSpot",
+  "version": "7.0.6",
+  "description": "RingCentral Chrome extension for HubSpot based on RingCentral Embeddable",
   "main": "index.js",
   "scripts": {
     "build": "./node_modules/.bin/cross-env NODE_ENV=production ./node_modules/.bin/webpack --progress -w",
@@ -23,7 +23,7 @@
   },
   "keywords": [
     "RingCentral",
-    "Hubspot",
+    "HubSpot",
     "embeddable",
     "phone"
   ],
@@ -34,57 +34,58 @@
   },
   "homepage": "https://github.com/ringcentral/hubspot-embeddable-ringcentral-phone#readme",
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.4.5",
-    "@babel/plugin-proposal-class-properties": "7.4.0",
-    "@babel/plugin-proposal-decorators": "7.4.0",
-    "@babel/plugin-proposal-json-strings": "7.2.0",
-    "@babel/plugin-syntax-dynamic-import": "7.0.0",
-    "@babel/plugin-transform-runtime": "7.4.3",
-    "@babel/preset-env": "^7.4.5",
-    "@babel/preset-react": "^7.8.3",
-    "@babel/register": "^7.8.6",
-    "@babel/runtime": "7.4.3",
-    "antd": "4.0.3",
-    "babel-eslint": "10.0.1",
-    "babel-loader": "8.0.5",
-    "babel-plugin-import": "1.10.0",
-    "babel-plugin-lodash": "3.3.4",
-    "concat-loader": "0.1.0",
-    "copy-webpack-plugin": "^6.0.3",
-    "cross-env": "5.1.6",
-    "css-loader": "^3.0.0",
-    "dayjs": "1.7.7",
-    "extract-loader": "2.0.1",
-    "file-loader": "1.1.11",
-    "happypack": "5.0.0",
-    "html-loader": "0.5.5",
-    "json-deep-copy": "^1.1.1",
-    "less": "^3.11.1",
-    "less-loader": "^5.0.0",
-    "lodash": "^4.17.20",
-    "lodash-webpack-plugin": "0.11.5",
-    "nanoid": "^3.1.20",
-    "npm-run-all": "4.1.3",
-    "postcss-loader": "^3.0.0",
+    "@babel/cli": "^7.13.16",
+    "@babel/core": "^7.13.16",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/plugin-proposal-decorators": "^7.13.15",
+    "@babel/plugin-proposal-json-strings": "^7.13.8",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.13.15",
+    "@babel/preset-env": "^7.13.15",
+    "@babel/preset-react": "^7.13.13",
+    "@babel/register": "^7.13.16",
+    "@babel/runtime": "^7.13.17",
+    "antd": "^4.15.2",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.2.2",
+    "babel-plugin-import": "^1.13.3",
+    "babel-plugin-lodash": "^3.3.4",
+    "concat-loader": "^0.1.0",
+    "copy-webpack-plugin": "^8.1.1",
+    "cross-env": "^7.0.3",
+    "css-loader": "^5.2.4",
+    "dayjs": "^1.10.4",
+    "extract-loader": "^5.1.0",
+    "fast-deep-equal": "^3.1.3",
+    "file-loader": "^6.2.0",
+    "happypack": "^5.0.1",
+    "html-loader": "^2.1.2",
+    "json-deep-copy": "^1.1.6",
+    "less": "^4.1.1",
+    "less-loader": "^8.1.1",
+    "lodash": "^4.17.21",
+    "lodash-webpack-plugin": "^0.11.6",
+    "nanoid": "^3.1.22",
+    "npm-run-all": "^4.1.5",
+    "postcss-loader": "^5.2.0",
     "postcss-rename-selector": "^0.1.1",
-    "pug-html-loader": "1.1.5",
-    "react": "16.13.0",
-    "react-dom": "16.13.0",
-    "recursive-assign": "0.2.0",
-    "replace-in-file": "^5.0.2",
-    "ringcentral-embeddable-extension-common": "0.11.1",
-    "shelljs": "^0.8.2",
-    "standard": "^12.0.1",
-    "style-loader": "0.21.0",
-    "stylus": "0.54.5",
-    "stylus-loader": "3.0.2",
-    "url-loader": "1.1.2",
-    "webpack": "4.44.1",
-    "webpack-cli": "3.3.12",
-    "webpack-dev-server": "3.11.0",
-    "webpack-extraneous-file-cleanup-plugin": "2.0.0",
-    "webpack-noodle-plugin": "^1.0.9"
+    "pug-html-loader": "^1.1.5",
+    "react": "^17.0.2",
+    "react-delta": "^1.1.0",
+    "react-dom": "^17.0.2",
+    "react-draggable": "^4.4.3",
+    "recursive-assign": "^0.2.0",
+    "replace-in-file": "^6.2.0",
+    "ringcentral-embeddable-extension-common": "^0.11.1",
+    "shelljs": "^0.8.4",
+    "standard": "^16.0.3",
+    "style-loader": "^2.0.0",
+    "stylus": "^0.54.8",
+    "stylus-loader": "^5.0.0",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.35.1",
+    "webpack-cli": "^4.6.0",
+    "webpack-dev-server": "^3.11.2"
   },
   "standard": {
     "parser": "babel-eslint",
@@ -94,5 +95,8 @@
     "ignore": [
       "docs"
     ]
+  },
+  "dependencies": {
+    "blueimp-md5": "^2.18.0"
   }
 }
