--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hubspot-embeddable-ringcentral-phone",
-  "version": "7.0.6",
+  "version": "7.1.0",
   "description": "RingCentral Chrome extension for HubSpot based on RingCentral Embeddable",
   "main": "index.js",
   "scripts": {
@@ -82,6 +82,7 @@
     "style-loader": "^2.0.0",
     "stylus": "^0.54.8",
     "stylus-loader": "^5.0.0",
+    "timeout-as-promise": "^1.0.0",
     "url-loader": "^4.1.1",
     "webpack": "^5.35.1",
     "webpack-cli": "^4.6.0",
