--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "RingCentral Chrome extension for HubSpot based on RingCentral Embeddable",
   "main": "index.js",
   "scripts": {
-    "build": "./node_modules/.bin/cross-env NODE_ENV=production ./node_modules/.bin/webpack --progress -w",
+    "build": "./node_modules/.bin/cross-env NODE_ENV=production ./node_modules/.bin/webpack --config build/webpack.config.js --progress -w",
     "start": "npm run build",
     "postinstall": "node bin/post-install",
     "lint": "./node_modules/.bin/standard",
@@ -34,60 +34,60 @@
   },
   "homepage": "https://github.com/ringcentral/hubspot-embeddable-ringcentral-phone#readme",
   "devDependencies": {
-    "@babel/cli": "^7.13.16",
-    "@babel/core": "^7.13.16",
-    "@babel/plugin-proposal-class-properties": "^7.13.0",
-    "@babel/plugin-proposal-decorators": "^7.13.15",
-    "@babel/plugin-proposal-json-strings": "^7.13.8",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/plugin-transform-runtime": "^7.13.15",
-    "@babel/preset-env": "^7.13.15",
-    "@babel/preset-react": "^7.13.13",
-    "@babel/register": "^7.13.16",
-    "@babel/runtime": "^7.13.17",
-    "antd": "^4.15.2",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.2.2",
-    "babel-plugin-import": "^1.13.3",
-    "babel-plugin-lodash": "^3.3.4",
-    "concat-loader": "^0.1.0",
-    "copy-webpack-plugin": "^8.1.1",
-    "cross-env": "^7.0.3",
-    "css-loader": "^5.2.4",
-    "dayjs": "^1.10.4",
-    "eslint": "^7.31.0",
-    "extract-loader": "^5.1.0",
-    "fast-deep-equal": "^3.1.3",
-    "file-loader": "^6.2.0",
-    "happypack": "^5.0.1",
-    "html-loader": "^2.1.2",
-    "json-deep-copy": "^1.1.6",
-    "less": "^4.1.1",
-    "less-loader": "^8.1.1",
-    "lodash": "^4.17.21",
-    "lodash-webpack-plugin": "^0.11.6",
-    "nanoid": "^3.1.22",
-    "npm-run-all": "^4.1.5",
-    "postcss-loader": "^5.2.0",
-    "postcss-rename-selector": "^0.1.1",
-    "pug-html-loader": "^1.1.5",
-    "react": "^17.0.2",
-    "react-delta": "^1.1.0",
-    "react-dom": "^17.0.2",
-    "react-draggable": "^4.4.3",
-    "recursive-assign": "^0.2.0",
-    "replace-in-file": "^6.2.0",
-    "ringcentral-embeddable-extension-common": "^0.12.1",
-    "shelljs": "^0.8.4",
-    "standard": "^16.0.3",
-    "style-loader": "^2.0.0",
-    "stylus": "^0.54.8",
-    "stylus-loader": "^5.0.0",
-    "timeout-as-promise": "^1.0.0",
-    "url-loader": "^4.1.1",
-    "webpack": "^5.35.1",
-    "webpack-cli": "^4.6.0",
-    "webpack-dev-server": "^3.11.2"
+    "@ant-design/icons": "4.7.0",
+    "@babel/cli": "7.16.0",
+    "@babel/core": "7.16.0",
+    "@babel/plugin-proposal-class-properties": "7.16.0",
+    "@babel/plugin-proposal-decorators": "7.16.4",
+    "@babel/plugin-proposal-json-strings": "7.16.0",
+    "@babel/plugin-syntax-dynamic-import": "7.8.3",
+    "@babel/plugin-transform-runtime": "7.16.4",
+    "@babel/preset-env": "7.16.4",
+    "@babel/preset-react": "7.16.0",
+    "@babel/register": "7.16.0",
+    "@babel/runtime": "7.16.3",
+    "antd": "4.17.2",
+    "babel-eslint": "10.1.0",
+    "babel-loader": "8.2.3",
+    "babel-plugin-import": "1.13.3",
+    "babel-plugin-lodash": "3.3.4",
+    "blueimp-md5": "2.19.0",
+    "concat-loader": "0.1.0",
+    "copy-webpack-plugin": "10.0.0",
+    "cross-env": "7.0.3",
+    "css-loader": "6.5.1",
+    "dayjs": "1.10.7",
+    "dotenv": "10.0.0",
+    "extract-loader": "5.1.0",
+    "fast-deep-equal": "3.1.3",
+    "file-loader": "6.2.0",
+    "html-loader": "3.0.1",
+    "json-deep-copy": "1.1.6",
+    "less": "4.1.2",
+    "less-loader": "10.2.0",
+    "lodash": "4.17.21",
+    "lodash-webpack-plugin": "0.11.6",
+    "nanoid": "3.1.30",
+    "postcss-loader": "6.2.1",
+    "postcss-rename-selector": "0.1.1",
+    "@electerm/antd-dayjs-webpack-plugin": "1.0.7",
+    "react": "17.0.2",
+    "react-delta": "1.1.2",
+    "react-dom": "17.0.2",
+    "react-draggable": "4.4.4",
+    "recursive-assign": "0.2.0",
+    "replace-in-file": "6.3.2",
+    "ringcentral-embeddable-extension-common": "0.12.2",
+    "shelljs": "0.8.4",
+    "standard": "16.0.4",
+    "style-loader": "3.3.1",
+    "stylus": "0.55.0",
+    "stylus-loader": "6.2.0",
+    "timeout-as-promise": "1.0.0",
+    "url-loader": "4.1.1",
+    "webpack": "5.64.4",
+    "webpack-cli": "4.9.1",
+    "webpack-dev-server": "4.6.0"
   },
   "standard": {
     "parser": "babel-eslint",
@@ -98,8 +98,5 @@
       "docs"
     ]
   },
-  "dependencies": {
-    "@ant-design/icons": "^4.6.2",
-    "blueimp-md5": "^2.18.0"
-  }
+  "dependencies": {}
 }
